2015-05-07 Ivan Perez <ivan.perez@keera.co.uk>
        * tests/: adapts tests to new API.

2015-05-06 Ivan Perez <ivan.perez@keera.co.uk>
        * Yampa.cabal: disables tests by default. Version bump (0.10.1.1).

2015-05-05 Ivan Perez <ivan.perez@keera.co.uk>
        * Yampa.cabal: exposes internal modules for documentation purposes.
          Version bump (0.10.1)

2015-05-05 Ivan Perez <ivan.perez@keera.co.uk>
        * src/: Reorders code. Marks modules as deprecated. Removes useless functions.
        * Yampa.cabal: version bump (0.10.0)

2015-05-05 Ivan Perez <ivan.perez@keera.co.uk>
        * src/FRP/Yampa.hs: documentation. Removes tabs.
        * README.md: links to games, related projects, documentation.
        * Yampa.cabal: version bump (0.9.7)

2015-03-30 Ivan Perez <ivan.perez@keera.co.uk>
        * src/FRP/Yampa/Task.hs: Adds Functor and Applicative instances,
          for compatibility with base >= 4.8 (issue #7, pull request by
          Ryan Scott).
        * Yampa.cabal: version bump (0.9.6.1).

2015-03-04 Ivan Perez <ivan.perez@keera.co.uk>
        * src/: Coding style improvements.

2014-08-29 Ivan Perez <ivan.perez@keera.co.uk>

        * Yampa.cabal: version bump (0.9.6).
        * src/: Adds a substantial amount of documentation.
        * src/FRP/Yampa.hs: Adds a new pause combinator.

2014-06-04 Ivan Perez <ivan.perez@keera.co.uk>

        * Adds project to hudson-backed continuous integration server.

2014-04-26 Ivan Perez <ivan.perez@keera.es>

        * Yampa.cabal: version bump (0.9.5).
        * Adds CHANGELOG to cabal file.

2014-04-07 Ivan Perez <ivan.perez@keera.es>

        * Yampa.cabal: new maintainer, version bump (0.9.4).
        * src/: documentation is exposed so that Haddock can process it.
        * No interface changes.

Copyright (c) 2003, Henrik Nilsson, Antony Courtney and Yale University.
All rights reserved.